# TEST-CI

./: .travis.yml  CMakeLists.txt  config.m4  config.w32  helloword.c  php_helloword.h
tests/: 001.phpt  002.phpt  003.phpt
