cmake_minimum_required(VERSION 3.13)
#set the project name
project(Helloword)
include_directories(/home/prince/Downloads/php-7.3.6/Zend)
include_directories(/home/prince/Downloads/php-7.3.6/main)
include_directories(/home/prince/Downloads/php-7.3.6/)
include_directories(./include)
include_directories(.)
add_executable(helloword helloword.c)

